# shasec

./: .dockerignore  .env.template  .gitattributes  .gitignore  .gitlab-ci.yml  DEPLOY.md  Dockerfile  LICENSE  README.md  compose.image.yml  docker-compose.override.yml  docker-compose.yml  docker-run.sh  pyproject.toml  shasec.txt
.github/workflows/: build.yml  qt-mac.yml  release.yml
backend/: cli.py  entrypoint-api.sh  main.py
backend/alembic/: env.py
backend/alembic/versions/: 2026_06_08_1024-64524c63b666_initial.py  2026_06_11_1455-7d7d41ad0eef_shasec_core_models.py  2026_06_11_1655-1bc196249524_exploit_model_active_exploitation_.py
backend/app/: __init__.py  api.py
backend/app/admin/api/v1/: auth.py  role.py
backend/app/admin/schema/: user.py
backend/app/admin/service/: auth_service.py  secure_token_service.py  user_service.py
backend/app/shasec/: worker.py
backend/app/shasec/api/v1/: scan.py  target.py
backend/app/shasec/plugins/: __init__.py  base.py  http_security.py  httpx_scan.py  katana.py  nikto.py  nuclei.py  zap.py
backend/app/shasec/schema/: ai_analysis.py  exploit.py  finding.py  report.py  scan.py  target.py
backend/app/shasec/service/: ai_service.py  finding_service.py  orchestrator.py  progress.py  report_service.py  scan_service.py  target_service.py
backend/app/shasec/verifier/: __init__.py  _spec.py  api_auth_matrix.py  base.py  exposed_endpoints.py  jwt_attacks.py  sqli.py  ssti.py
backend/common/: enums.py  log.py
backend/common/email_conf/: email.py
backend/common/sso/: base.py  google.py
backend/core/: conf.py  registrar.py
backend/crud/: crud_ai_analysis.py  crud_exploit.py  crud_finding.py  crud_report.py  crud_scan.py  crud_target.py
backend/database/: db_postgres.py
backend/middleware/: jwt_auth_middleware.py
backend/models/: __init__.py  ai_analysis.py  exploit.py  finding.py  report.py  role.py  scan.py  target.py
backend/seeder/: README.md
backend/utils/: request_parse.py
docs/: build-your-own-shasec.md
qt-client/: .gitignore  ApiClient.cpp  ApiClient.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  main.cpp
