[project]
name = "monshaapi"
version = "0.1.0"
description = "A lean, batteries-included FastAPI backend boilerplate."
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

# Floors only (no upper caps): always resolve to the latest compatible release.
# The single exception is fastapi-limiter, whose 0.2.0 ships a broken (empty)
# __init__, so it is held at the last working line.
dependencies = [
    # Web framework
    "fastapi[standard]>=0.118",
    "pydantic>=2.11",
    "pydantic-settings>=2.7",
    "asgi-correlation-id>=4.3.3",
    "fastapi-pagination>=0.12.29",
    "fastapi-limiter>=0.1.6,<0.2.0",
    "asgiref>=3.8.1",
    "msgspec>=0.18.6",
    # Database
    "sqlalchemy>=2.0.36",
    "sqlalchemy-crud-plus>=1.6.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.1.1",
    "sqlalchemyseed>=2.0.0",
    "python-ulid>=2.7.0",
    # Cache / Redis
    "redis>=5.2.0",
    # Auth / security / RBAC
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=4.2.0",
    "cryptography>=43.0.1",
    "casbin>=1.36.3",
    "casbin-async-sqlalchemy-adapter>=1.5.0",
    "fast-captcha>=0.3.2",
    "itsdangerous>=2.2.0",
    # Object storage (MinIO / S3 / GCS)
    "minio>=7.2.9",
    "boto3>=1.35.39",
    "google-cloud-storage>=2.18.2",
    # Email
    "fastapi-mail>=1.4.1",
    # Request parsing / i18n helpers
    "user-agents>=2.2.0",
    "phonenumbers>=8.13.46",
    "xdbsearchip>=1.0.2",
    # Logging
    "loguru>=0.7.2",
    # IANA time zone database (zoneinfo has no data on Windows / slim images)
    "tzdata>=2024.1",
]

# Opt-in observability stack. Install with: uv sync --extra monitoring
[project.optional-dependencies]
monitoring = [
    "prometheus-client>=0.21.0,<0.22.0",
    "opentelemetry-distro>=0.49b2,<0.50",
    "opentelemetry-instrumentation-fastapi>=0.49b2,<0.50",
    "opentelemetry-instrumentation-logging>=0.49b2,<0.50",
    "opentelemetry-exporter-otlp>=1.28.2,<2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
